--- a/templates/movie-list.html
+++ b/templates/movie-list.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %} {% block head_content %}
 <style>
   body {
-    margin: 0;
     min-height: 100vh;
     display: grid;
     /* place-content: center; */
@@ -27,6 +26,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin: 16px 0px;
   }
 
   .movie-summary {
@@ -48,6 +48,11 @@
     justify-items: center;
     gap: 24px;
   }
+
+  .movie-name {
+    text-decoration: none;
+    font-size: 24px;
+  }
 </style>
 
 {% endblock %} {% block content %}
@@ -56,12 +61,30 @@
   <div class="movie-container">
     <img src="{{movie.poster}}" alt="{{movie.name}}" class="movie-poster" />
     <div class="movie-spec">
-      <h2 class="movie-name">{{movie.name}}</h2>
-      <h2 class="movie-rating">⭐ {{movie.rating}}</h2>
+      <!-- <a href="/movie-list/{{movie.id}}" class="movie-name">{{movie.name}}</a> -->
+      <a href="{{url_for('movies_list_bp.movie_details_page', id=movie.id)}}" class="movie-name">{{movie.name}}</a>
+      <h4 class="movie-rating">⭐ {{movie.rating}}</h4>
     </div>
     <p class="movie-summary">{{movie.summary}}</p>
+    <!-- Task 1.2 Add Delete Button -->
+    <!-- <a
+      href="{{url_for('movies_list_bp.delete_movie_page_by_id', id=movie.id)}}"
+      class="movie-name"
+      >Delete Movie</a
+    > -->
+    <form action="{{url_for('movies_list_bp.delete_movie_page_by_id', id=movie.id)}}" method="POST"
+      class="form-container">
+      <button type="submit" class="btn btn-danger">
+        <i class="fa-solid fa-trash"></i> Delete
+      </button>
+    </form>
+
+    <!-- Task 1.3 Integration -->
   </div>
   {% endfor %}
 </section>
 
 {% endblock %}
+
+<!-- a -> calls GET methods -->
+<!-- Form GET, POST -->
